--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="content">
                 <h3>T20 World Cup 2022 Analysis.</h3>
                 <p>Build Machine learning Model And Data Visualization.</p>
-                <a href="#">read more</a>
+                <a href="https://github.com/Naresh9368/t20-worldCup-2022-analysis">read more</a>
             </div>
         </div>
        
